[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/weapons/pistol/Pistol.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/player/Alligator.png" type="Texture" id=2]
[ext_resource path="res://scripts/player/Player.gd" type="Script" id=3]
[ext_resource path="res://scripts/weapons/WeaponManager.gd" type="Script" id=4]
[ext_resource path="res://scenes/weapons/revolver/Revolver.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/weapons/smg/SMG.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/weapons/shotgun/Shotgun.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/player/player_jump.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/player/player_hit.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/pickups/crate_pickup.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/player/player_die.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 6 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
script = ExtResource( 3 )
JumpAudio = ExtResource( 8 )
HitAudio = ExtResource( 9 )
DieAudio = ExtResource( 11 )
CratePickupAudio = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
hframes = 4
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="JumpPressedTimer" type="Timer" parent="."]
wait_time = 0.14
one_shot = true

[node name="GroundedTimer" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WeaponManager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Pistol" parent="WeaponManager" instance=ExtResource( 1 )]

[node name="Revolver" parent="WeaponManager" instance=ExtResource( 5 )]
visible = false

[node name="SMG" parent="WeaponManager" instance=ExtResource( 6 )]
visible = false

[node name="Shotgun" parent="WeaponManager" instance=ExtResource( 7 )]
visible = false
